--- a/pipeline/TODO
+++ b/pipeline/TODO
@@ -1,3 +1,3 @@
 - Implement cache alongside pipeline
-- Lib to process the cpu emulation
 - Animate pipeline/PIPE with path highlights and data flow
+- numbers in SEQ properly transformed between updates
